--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,12 @@
 			<artifactId>junit-dep</artifactId>
 			<version>4.8.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.28.Final</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
