--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=Kan@2911
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework=debug
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/blogs?createTableIfNotExists=true
+#spring.datasource.username=root
+#spring.datasource.password=mysql123
+#spring.jpa.hibernate.ddl-auto=update
+#logging.level.org.springframework=debug
